# wit-resource-example

./: Cargo.toml  Dockerfile.linux-kernel  Makefile  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: actions.yml  release.yaml
crates/extension/: Cargo.toml
crates/extension/src/: bindings.rs  lib.rs
crates/extension/wit/: world.wit
crates/facade/: Cargo.toml
crates/facade/src/: bindings.rs  lib.rs
crates/facade/wit/: world.wit
crates/host/: Cargo.toml
crates/host/src/: main.rs
