[workspace]
resolver = "2"
members = ["crates/*"]
default-members = ["crates/host"]

[workspace.package]
version = "0.1.19"

[workspace.dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
dashmap = "6.1.0"
dirs = "6.0.0"
glob = "0.3.2"
handlebars = "6.3.2"
http = "1.3.1"
once_cell = "1.21.3"
reqwest = "0.12.15"
ring = "0.17.14"
serde_json = "1.0.140"
sha2 = "0.10.9"
tempfile = "3.19.1"
thiserror = "2.0.12"
tokio-test = "0.4"
toml = "0.8.22"
wasmtime-wasi = "32.0.0"

[workspace.dependencies.clap]
version = "4.5.37"
features = ["derive", "string", "env"]

[workspace.dependencies.serde]
version = "1.0.219"
features = ["derive"]

[workspace.dependencies.tokio]
version = "1.45.0"
features = ["full"]

[workspace.dependencies.wasmtime]
version = "32.0.0"
features = ["component-model", "async"]

[workspace.dependencies.wit-bindgen-rt]
version = "0.42.1"
features = ["bitflags"]
